<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="59dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_width="41dp"
                        android:layout_height="wrap_content">
                    <ImageView android:layout_width="16dp"
                               android:layout_height="16dp"
                               android:scaleType="centerCrop"
                               android:layout_gravity="center"
                               android:src="@drawable/img_location"/>
                </LinearLayout>

                <TextView
                        android:id="@+id/tv_currentLocation"
                        android:text="@string/current_location"
                        android:textColor="@color/map_1a81da"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/title_poi"
                        android:textSize="15sp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/title_black_toolbar"
                        android:text="@string/title_poi"
                        android:maxLines="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/address_poi"
                    android:textColor="@color/map_999"
                    android:textSize="12sp"
                    android:layout_marginLeft="41dp"
                    android:gravity="center"
                    android:text="@string/address_poi"
                    android:maxLines="1"
                    android:maxEms="21"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageView
                android:id="@+id/img_selected"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_selected_map"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

    </RelativeLayout>

</LinearLayout>