<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:id="@+id/root_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="85dp">

            <com.amap.api.maps.MapView
                    android:id="@+id/map_locate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            </com.amap.api.maps.MapView>

            <LinearLayout
                    android:id="@+id/llt_relocated"
                    android:layout_width="@dimen/width_relocate"
                    android:layout_height="@dimen/height_relocate"
                    android:background="@drawable/shape_relocate_map"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="2dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                <LinearLayout
                        android:background="@color/map_fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/location_image_locate"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_relocation"
                            android:layout_gravity="center"/>
                    <TextView
                            android:text="重新定位"
                            android:layout_gravity="center"
                            android:layout_marginLeft="2dp"
                            android:textSize="@dimen/textsize_relocate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="@color/map_fff"
                android:gravity="center_vertical"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:layout_width="41dp"
                            android:layout_height="wrap_content">
                        <ImageView android:layout_width="16dp"
                                   android:layout_height="16dp"
                                   android:scaleType="centerCrop"
                                   android:layout_gravity="center"
                                   android:src="@drawable/img_location"/>
                    </LinearLayout>

                    <TextView
                            android:id="@+id/my_location"
                            android:text="@string/my_location"
                            android:textSize="15sp"
                            android:textColor="@color/map_333"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/within_area"
                            android:textSize="12sp"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/map_1a81da"
                            android:maxLines="1"
                            android:text="@string/within_area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                        android:id="@+id/address_locate"
                        android:textColor="@color/map_999"
                        android:textSize="12sp"
                        android:layout_marginLeft="41dp"
                        android:gravity="center"
                        android:text="@string/address_poi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>